--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Mohit Jandwani <mohitjandwani@gmail.com>"]
 
 [tool.poetry.scripts]
 server = "tw_sub:start_app"
+worker = "tw_sub:start_worker"
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -16,6 +17,8 @@ flask = "^1.1.2"
 waitress = "^1.4.4"
 sqlite3worker = "^1.1.7"
 requests = "^2.24.0"
+sqlalchemy = "^1.3.18"
+psycopg2 = "^2.8.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
