--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ server = "tw_sub:start_app"
 worker = "tw_sub:start_worker"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "3.8.3"
 uvicorn = "^0.11.5"
 pandas = "^1.0.4"
 tweepy = "^3.8.0"
