--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "repository": "https://github.com/MohitKumar1991/twitter-export",
     "success_url": "/",
     "scripts": {
-        "postdeploy": "sh ./db_setup.sh"
+        "postdeploy": "make heroku_setup"
     },
     "env": {
         "FLASK_ENV": {
