--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ sqlite3worker = "^1.1.7"
 requests = "^2.24.0"
 sqlalchemy = "^1.3.18"
 psycopg2 = "^2.8.5"
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
