--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
         "postdeploy": "python -m  tw_sub.recreate_db"
     },
     "env": {
-        "FLASK_ENV": {
+        "ENV": {
             "description": "environment variable that determines the flask configuration - namely where to get postgres db url",
             "value": "prod"
         }
