--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,13 @@
 [tool.poetry]
 name = "tw-sub"
-version = "0.1.0"
-description = ""
+version = "0.3.0"
+description = "This is an app to DM or export your twitter followers"
 authors = ["Mohit Jandwani <mohitjandwani@gmail.com>"]
-
-[tool.poetry.scripts]
-server = "tw_sub:start_app"
-worker = "tw_sub:start_worker"
-recreate_db = "tw_sub:recreate_db"
 
 [tool.poetry.dependencies]
 python = "3.8.3"
-uvicorn = "^0.11.5"
 tweepy = "^3.8.0"
 flask = "^1.1.2"
-waitress = "^1.4.4"
-sqlite3worker = "^1.1.7"
 requests = "^2.24.0"
 sqlalchemy = "^1.3.18"
 psycopg2 = "^2.8.5"
