--- a/app.json
+++ b/app.json
@@ -15,6 +15,14 @@
         "ENV": {
             "description": "environment variable that determines the flask configuration - namely where to get postgres db url",
             "value": "prod"
+        },
+        "BASIC_USERNAME": {
+            "description": "username for your app for protected urls",
+            "value": "admin"
+        }, 
+        "BASIC_PASSWORD": {
+            "description": "username for your app for protected urls",
+            "value": "password"
         }
     },
     "addons": [
