--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requests = "^2.24.0"
 sqlalchemy = "^1.3.18"
 psycopg2 = "^2.8.5"
 gunicorn = "^20.0.4"
+flask_httpauth = "^4.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
