--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy = "^1.3.18"
 psycopg2 = "^2.8.5"
 gunicorn = "^20.0.4"
 flask_httpauth = "^4.1.0"
+flask_cors = "^3.0.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
